[gd_scene load_steps=10 format=2]

[ext_resource path="res://pre-game.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/title.png" type="Texture" id=2]
[ext_resource path="res://Fonts/dpcomic.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 14
outline_color = Color( 0.647059, 0, 0, 1 )
extra_spacing_char = 3
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "normal"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "selected"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.611765, 0.611765, 1 ), Color( 1, 0.858824, 0.67451, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.996078, 0.67451, 1 ), Color( 1, 0.819608, 0.611765, 1 ), Color( 1, 0.72549, 0.72549, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "normal"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "selected"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.611765, 0.611765, 1 ), Color( 1, 0.858824, 0.67451, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.996078, 0.67451, 1 ), Color( 1, 0.819608, 0.611765, 1 ), Color( 1, 0.72549, 0.72549, 1 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 13
font_data = ExtResource( 3 )

[node name="pre_game" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 240, 135 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="quit" type="Label" parent="."]
anchor_right = 0.4
margin_left = 60.0
margin_top = 230.0
margin_right = 116.0
margin_bottom = 251.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.905882, 0.796078, 0.556863, 1 )
text = "Quit"
align = 1
valign = 1

[node name="anim" type="AnimationPlayer" parent="quit"]
anims/normal = SubResource( 2 )
anims/selected = SubResource( 3 )

[node name="continue_game" type="Label" parent="."]
anchor_right = 0.4
margin_left = 200.0
margin_top = 230.0
margin_right = 268.0
margin_bottom = 251.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.905882, 0.796078, 0.556863, 1 )
text = "Continue"
align = 1
valign = 1

[node name="anim" type="AnimationPlayer" parent="continue_game"]
anims/normal = SubResource( 4 )
anims/selected = SubResource( 5 )

[node name="terms" type="Label" parent="."]
margin_left = 19.7585
margin_top = 6.58619
margin_right = 319.758
margin_bottom = 227.586
custom_fonts/font = SubResource( 6 )
text = "This game, along with any and all graphical assets, is
property of Satoshi Matos and should only be used
for recreational purposes.

Use of any of the game's assets such as sprites is not
permitted unless the creator consents.

You may reach the creator at maylsonmatos@gmail.com

The music, however, is property of CAPCOM
(all rights reserved).

By clicking 'Continue' you agree to abide by the terms
above. Otherwise click 'Quit'."
align = 1

[connection signal="mouse_entered" from="quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_entered" from="continue_game" to="." method="_on_credits_mouse_entered"]
